# portman

./: .portman.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs  output.rs  process.rs  scanner.rs
src/commands/: check.rs  free.rs  history.rs  init.rs  kill.rs  list.rs  mod.rs  watch.rs
test-app/: .portman.yaml  README.md  package-lock.json  package.json  server.js
tests/: integration_tests.rs
